# exploring-pinns

./: demo_pinn_1.py  demo_pinn_2.py  demo_pinn_2_heat.py  demo_pinn_3_residuals.py  pyproject.toml
